# brick-games

./: Makefile  README.md  pyproject.toml
src/: Makefile  main.c
src/brick_games/: main.py  title.py
src/brick_games/games/: __init__.py  bill.py  froggy.py  maze.py  poong.py  racing.py  snek.py  twin.py
src/brick_games/ui/: __init__.py  game_menu.py  game_title.py  helper.py  menu_item.py  title.py  title_screen.py  window.py
tests/: test_game_menu.py  test_game_title.py  test_greet.py  test_helper.py  test_hola.py  test_menu_item.py  test_number.py  test_poong.py  test_snek.py  test_title.py  test_title_screen.py  test_window.py
